[gd_scene load_steps=6 format=3 uid="uid://cn1uti0lxkrwa"]

[ext_resource type="Script" uid="uid://ddfurve4rt12f" path="res://overlays/DebugMenu/DebugMenu.gd" id="1_yxrom"]
[ext_resource type="PackedScene" uid="uid://dcolbp2ncdywy" path="res://overlays/DebugMenu/MonitorTree/MonitorTree.tscn" id="2_oocbm"]
[ext_resource type="Script" uid="uid://bwfqi8qy1y2pv" path="res://overlays/DebugMenu/Options.gd" id="3_ak20w"]
[ext_resource type="PackedScene" uid="uid://bhl050he6o8ya" path="res://overlays/DebugMenu/MonitorOverlay/MonitorOverlay.tscn" id="3_xmbl3"]
[ext_resource type="Script" uid="uid://boua7jfqsbfb6" path="res://overlays/DebugMenu/VectorDraw.gd" id="4_tygll"]

[node name="DebugMenu" type="CanvasLayer"]
process_mode = 3
layer = 99
script = ExtResource("1_yxrom")

[node name="VectorDraw" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_tygll")

[node name="DebugMaster" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LblTitle" type="Label" parent="DebugMaster"]
layout_mode = 0
offset_right = 108.0
offset_bottom = 26.0
text = "DEBUG MENU"

[node name="TabContainer" type="TabContainer" parent="DebugMaster"]
layout_mode = 0
offset_left = 19.0
offset_top = 28.0
offset_right = 519.0
offset_bottom = 428.0
clip_tabs = false
all_tabs_in_front = true

[node name="Scenes" type="Control" parent="DebugMaster/TabContainer"]
layout_mode = 2

[node name="ItmLstScenes" type="ItemList" parent="DebugMaster/TabContainer/Scenes"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -84.0
offset_bottom = -15.0

[node name="Monitors" type="Control" parent="DebugMaster/TabContainer"]
visible = false
layout_mode = 2

[node name="ChkShowMonitors" type="CheckBox" parent="DebugMaster/TabContainer/Monitors"]
layout_mode = 0
offset_left = 472.0
offset_top = 48.0
offset_right = 631.0
offset_bottom = 79.0
text = "Display Monitors"

[node name="MonitorTree" parent="DebugMaster/TabContainer/Monitors" instance=ExtResource("2_oocbm")]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 466.0
offset_bottom = 341.0

[node name="Options" type="Control" parent="DebugMaster/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_ak20w")

[node name="ChkFullscreen" type="CheckBox" parent="DebugMaster/TabContainer/Options"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "Fullscreen"

[node name="ChkShowVectors" type="CheckBox" parent="DebugMaster/TabContainer/Options"]
layout_mode = 0
offset_top = 34.0
offset_right = 132.0
offset_bottom = 65.0
text = "Draw Vectors"

[node name="ChkShowDebugIcons" type="CheckBox" parent="DebugMaster/TabContainer/Options"]
layout_mode = 0
offset_left = 153.0
offset_top = 34.0
offset_right = 340.0
offset_bottom = 65.0
text = "Debug Camera Icons"

[node name="BtnFPS" type="Button" parent="DebugMaster/TabContainer/Options"]
layout_mode = 0
offset_top = 78.0
offset_right = 62.0
offset_bottom = 109.0
text = "FPS: 60"

[node name="LblVSync" type="Label" parent="DebugMaster/TabContainer/Options"]
layout_mode = 0
offset_top = 129.0
offset_right = 94.0
offset_bottom = 152.0
text = "VSync Mode"

[node name="OptVSync" type="OptionButton" parent="DebugMaster/TabContainer/Options/LblVSync"]
layout_mode = 0
offset_left = 17.0
offset_top = 30.0
offset_right = 62.0
offset_bottom = 50.0
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Active"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="MonitorOverlay" parent="." instance=ExtResource("3_xmbl3")]
visible = false

[connection signal="item_activated" from="DebugMaster/TabContainer/Scenes/ItmLstScenes" to="." method="_on_itm_lst_scenes_item_activated"]
[connection signal="toggled" from="DebugMaster/TabContainer/Monitors/ChkShowMonitors" to="." method="_on_chk_show_monitors_toggled"]
[connection signal="AddToMonitorOverlay" from="DebugMaster/TabContainer/Monitors/MonitorTree" to="MonitorOverlay" method="ToggleProperty"]
[connection signal="toggled" from="DebugMaster/TabContainer/Options/ChkFullscreen" to="DebugMaster/TabContainer/Options" method="_on_chk_fullscreen_toggled"]
[connection signal="toggled" from="DebugMaster/TabContainer/Options/ChkShowVectors" to="DebugMaster/TabContainer/Options" method="_on_chk_show_vectors_toggled"]
[connection signal="toggled" from="DebugMaster/TabContainer/Options/ChkShowDebugIcons" to="DebugMaster/TabContainer/Options" method="_on_chk_show_debug_toggled" binds= ["DebugIcon"]]
[connection signal="pressed" from="DebugMaster/TabContainer/Options/BtnFPS" to="DebugMaster/TabContainer/Options" method="_on_btn_fps_pressed"]
[connection signal="item_selected" from="DebugMaster/TabContainer/Options/LblVSync/OptVSync" to="DebugMaster/TabContainer/Options" method="_on_opt_v_sync_item_selected"]
